made it bit more readable

--- a/docs/get_rune.mdx
+++ b/docs/get_rune.mdx
@@ -7,9 +7,12 @@ Rune and the dependant toolchains used to generate bytecode require some depende
 
 ## Installing rune cli by building (Not Recommended)
 You can install rune cli by building it for Mac and Linux platform by following the instructions provided in the Rune github repository - https://github.com/hotg-ai/rune/blob/master/CONTRIBUTING.md
+
 Because there are many dependencies that are nightly the rune binary can be a bit flaky.  
 
-To make it easier to use you can leverage [docker](https://www.docker.com/)! We have pre-built docker images that has been tested across all platforms and are stable. 
+To make it easier to use, you can leverage [docker](https://www.docker.com/)! 
+
+We have pre-built docker images that has been tested across all platforms and are stable. 
 
 Our images are available on [our docker hub](https://hub.docker.com/repository/docker/tinyverseml).
 
