--- a/docs/get_rune.mdx
+++ b/docs/get_rune.mdx
@@ -12,7 +12,7 @@ Because there are many dependencies that are nightly the rune binary can be a bi
 
 To make it easier to use, you can leverage [docker](https://www.docker.com/)! 
 
-We have pre-built docker images that has been tested across all platforms and are stable. 
+We have pre-built docker images that have been tested across all platforms and are stable. 
 
 Our images are available on [our docker hub](https://hub.docker.com/repository/docker/tinyverseml).
 
