Made a Docusaurus lint happy

--- a/docs/overview.mdx
+++ b/docs/overview.mdx
@@ -1,7 +1,14 @@
 ---
 title: Tinyverse Platform overview
 sidebar_label: Platform overview
-keywords: rune, platform, introduction, documentation, about, technology, understanding
+keywords:
+- rune
+- platform
+- introduction
+- documentation
+- about
+- technology
+- understanding
 ---
 
 Tinyverse is an open platform for containerizing, shipping and running TinyML applications. 
