--- a/docs/overview.mdx
+++ b/docs/overview.mdx
@@ -117,5 +117,5 @@ advantage of several features of the [Webassembly](https://webassembly.org/) pla
 
 ## Next steps
 - Read about [installing Rune and Hammerd](/docs/get_rune).
-- Get hands-on experience with the [Getting started with Run](/docs/getting_started/1)
+- Get hands-on experience with the tutorials [Getting started with Rune](/docs/tutorials/lesson-1/README)
     tutorial.
