Fixed some broken links

--- a/docs/get_started.mdx
+++ b/docs/get_started.mdx
@@ -528,7 +528,7 @@ You can clone our test-runes repo from here - https://github.com/hotg-ai/test-ru
 * food.rune - we have already built this rune for you but feel free to delete and rebuild using steps above
 
 Runes have much more expressive power which we hope to explain more in details using other sections in this docs.
-Feel free to reach out to us ond [discord]](https://discord.gg/gPCNNvRnF4).
+Feel free to reach out to us [on Discord](https://discord.gg/gPCNNvRnF4).
 
 
 ## Note on Windows
