--- a/docs/overview.mdx
+++ b/docs/overview.mdx
@@ -15,7 +15,6 @@ Tinyverse is an open platform for containerizing, shipping and running TinyML ap
 Rune decouples your ML application from the underlying hardware. Using Rune you can
 build, test and deploy your ML models faster to a variety of end devices.
 
-
 ## The Tinyverse platform
 
 The Rune platform provides the ability for Machine Learning Engineers/Application package
@@ -111,7 +110,8 @@ the default registry configuration):
     to the host for access to the `RAND` capability. The host can then provide floating points
     and the input is process and prepared for the model.
 
-## The underlying technology
+## The Underlying Technology
+
 Rune & Hammerd is written in the [Rust programming language](https://rust-lang.org/) and takes
 advantage of several features of the [Webassembly](https://webassembly.org/) platform to deliver its functionality.
 
