Fixed some broken links

--- a/docs/overview.mdx
+++ b/docs/overview.mdx
@@ -116,6 +116,6 @@ Rune & Hammerd is written in the [Rust programming language](https://rust-lang.o
 advantage of several features of the [Webassembly](https://webassembly.org/) platform to deliver its functionality.
 
 ## Next steps
-- Read about [installing Rune and Hammerd](/docs/get_rune).
+- Read about [installing Rune and Hammerd](/docs/).
 - Get hands-on experience with the tutorials [Getting started with Rune](/docs/tutorials/lesson-1/README)
     tutorial.
