Fixed some broken links

--- a/docs/overview.mdx
+++ b/docs/overview.mdx
@@ -75,8 +75,9 @@ module, plus provides model handlers for various Machine Learning frameworks.
 
 Now you know a bit more about the Tinyverse it's time to build your first Rune!
 
-Check out [the Forge chapter](/docs/forge/) for an introduction to building and
-deploying Runes with Forge. Otherwise if the low-level details are more your
-thing, you may want to read through [the section on Rune](/docs/rune/).
+Check out [the Forge chapter](/docs/forge/overview) for an introduction to
+building and deploying Runes with Forge. Otherwise if the low-level details are
+more your thing, you may want to read through [the section on
+Rune](/docs/rune/overview).
 
 [qhacks]: https://qhacks.io/
