--- a/docs/videos/Forge-overview.mdx
+++ b/docs/videos/Forge-overview.mdx
@@ -1,6 +1,7 @@
 # Forge Overview
 
-Studio is a simplified GUI for generating ML pipeline i.e No code environment. We connect different nodes to make an ML pipeline. Studio containerize an ML pipeline that can execute with some guarantees with any ML framework, on any device/sensor, and any chipset.
+Hammer Forge Studio is a simplified GUI for generating ML pipeline i.e No code environment. We connect different nodes to make an ML pipeline. Studio containerize an ML pipeline that can execute with some guarantees with any ML framework, on any device/sensor, and any chipset.
+
 <iframe
   width={640}
   height={400}
