--- a/docs/hot-g/welcome-to-tinyverse.mdx
+++ b/docs/hot-g/welcome-to-tinyverse.mdx
@@ -9,9 +9,13 @@ applications and deploying them on edge devices.
 Check out our workshop from [QHacks 2022][qhacks] for a whirlwind overview of
 the Tinyverse and to see how Forge can develop and deploy Runes.
 
-import ReactPlayer from "react-player"
+import ReactPlayer from "react-player";
 
-<ReactPlayer controls width="100%" url="https://www.youtube.com/watch?v=tytpelD128s&t=91s" />
+<ReactPlayer
+  controls
+  width="100%"
+  url="https://www.youtube.com/watch?v=tytpelD128s&t=91s"
+/>
 
 ## Meet The Tinyverse
 
@@ -41,7 +45,7 @@ Similarly, the model's results will often need to be post-processed before they
 can be given to the main application.
 
 This entire system of inputs, outputs, models, and processing is called the
-*Machine Learning Pipeline*.
+_Machine Learning Pipeline_.
 
 ### The Runefile
 
@@ -75,7 +79,7 @@ module, plus provides model handlers for various Machine Learning frameworks.
 
 Now you know a bit more about the Tinyverse it's time to build your first Rune!
 
-Check out [the Forge chapter](/docs/forge/overview) for an introduction to
+Check out [the Forge chapter](/docs/hammer-forge-studio/overview) for an introduction to
 building and deploying Runes with Forge. Otherwise if the low-level details are
 more your thing, you may want to read through [the section on
 Rune](/docs/rune/overview).
